--- a/app/views/curation_concerns/file_sets/_actions.html.erb
+++ b/app/views/curation_concerns/file_sets/_actions.html.erb
@@ -1,3 +1,11 @@
+<%# FIXME: temp override %>
+<% if member.is_a? CurationConcerns::FilePresenter %>
+  <% if @presenter && can?(:read, @presenter.id) %>
+    <%= link_to 'Download', member.uri %>
+  <% else %>
+    You do not have download permissions
+  <% end %>
+<% elsif file_set %>
 <% if can?(:edit, file_set.id) %>
   <%= link_to( 'Edit', edit_polymorphic_path([main_app, file_set]),
     { class: 'btn btn-default', title: "Edit #{file_set}" }) %>
@@ -14,4 +22,5 @@
 <% if false && can?(:read, file_set.id) %>
   <%= link_to 'Download', main_app.download_path(file_set),
     class: 'btn btn-default', title: "Download #{file_set.to_s.inspect}", target: "_blank" %>
+<% end %>
 <% end %>
