Adds ingest date search filter
* Runs bundle update, specifically to bring in
  latest Preservation gem from github.
* Removes duplicate inclusion of module
* Updates FileSetPresenter; Uses newly available method,
  Preservation::PremisEventType.find_by_abbr().
* Indexes ingest date on file sets
* Associates file set with preservation events
* Adds search filters for ingest date
* Overrides curation_concerns catalog#index

--- a/app/views/shared/_site_search.html.erb
+++ b/app/views/shared/_site_search.html.erb
@@ -18,6 +18,12 @@
 
     <div class="input-group">
       <div class="input-group-btn">
+        <%
+        # TODO: the advanced_search_path URL helper sometimes makes a bogus URL. I think it is due to
+        # the fact that `params` sometimes has a param called "format", and the value of that param
+        # get's added as a pseudo file extension to the URL.
+        # For instance, I was getting /advanced.id=xzy.
+        %>
         <%= link_to 'Advanced Search', blacklight_advanced_search_engine.advanced_search_path(params.except(:controller, :action)), class: 'btn btn-primary advanced_search'%>
       </div>
     </div>
