--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,8 @@
 <br />
 <p>
-  HydraDAM2 is an audiovisual digital preservation repository that integrates preservation actions aimed at long-term stewardship
-  of content and provides discoverability and access to files based on technical and descriptive metadata. HydraDAM2
+  Phydo2 is an audiovisual digital preservation repository that integrates preservation actions aimed at long-term stewardship
+  of content and provides discoverability and access to files based on technical and descriptive metadata. Phydo2
   is a collaborative, open-source project between Indiana University Libraries and the WGBH Educational Foundation
   Media Library and Archives that utilizes the emerging Fedora 4 repository architecture. For more information,
-  see the <%= link_to 'project wiki',  'https://wiki.dlib.indiana.edu/display/HD2/HydraDAM2+Home' %>.
+  see the <%= link_to 'project wiki',  'https://wiki.dlib.indiana.edu/display/HD2/Phydo2+Home' %>.
 </p>
