--- a/app/views/shared/_site_search.html.erb
+++ b/app/views/shared/_site_search.html.erb
@@ -3,8 +3,6 @@
     <legend class="sr-only">Search <%= application_name %></legend>
     <%= label_tag :catalog_search, t('curation_concerns.search.form.q.label'), class: "sr-only" %>
     <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
-                      
-    
     <div class="input-group">
       <%= text_field_tag(:q, params[:q], class: "q search-query form-control", id: "catalog_search",
                          placeholder: t('curation_concerns.search.form.q.placeholder'), tabindex: "1", type: "search") %>
@@ -19,12 +17,13 @@
     <div class="input-group">
       <div class="input-group-btn">
         <%
-        # TODO: the advanced_search_path URL helper sometimes makes a bogus URL. I think it is due to
-        # the fact that `params` sometimes has a param called "format", and the value of that param
-        # get's added as a pseudo file extension to the URL.
-        # For instance, I was getting /advanced.id=xzy.
+        # NOTE: Calling #to_hash below throws a deprecation warning, but it
+        # fixes a bug where advanced_search_path was creating invalid URLs
+        # because #to_param was getting called (somewhere inside the call
+        # stack), which returns a string, and the string was getting appended
+        # to the URL as a response format, which is not valid.
         %>
-        <%= link_to 'Advanced Search', blacklight_advanced_search_engine.advanced_search_path(params.except(:controller, :action)), class: 'btn btn-primary advanced_search'%>
+        <%= link_to 'Advanced Search', blacklight_advanced_search_engine.advanced_search_path(params.except(:controller, :action).to_hash), class: 'btn btn-primary advanced_search'%>
       </div>
     </div>
 
