--- a/app/views/curation_concerns/works/_member.html.erb
+++ b/app/views/curation_concerns/works/_member.html.erb
@@ -6,7 +6,7 @@
   <td class="attribute quality_level"><%= member.quality_level.join(' ').titleize %></td>
   <td class="attribute permission"><%= member.permission_badge %></td>
   <td>
-    <%= render 'curation_concerns/file_sets/actions', file_set: member %>
+    <%= render 'hyrax/file_sets/actions', file_set: member %>
   </td>
 </tr>
 
