--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -3,17 +3,11 @@
 # Adds a different search sidebar
 %>
 
-<% provide :page_title, "#{application_name} Search Results" %>
-<% provide :page_class, 'search' %>
-<% provide :page_header do %>
-  <%= render 'navbar' %>
-<% end %>
-
-<% provide :sidebar do %>
+<div id="sidebar" class="col-md-3 col-sm-4">
   <%= render 'shared/filter_search' %>
   <%= render 'search_sidebar' %>
-<% end %>
+</div>
 
-<div id="content">
+<div id="content" class="col-md-9 col-sm-8">
   <%= render 'search_results' %>
 </div>
