--- a/app/views/shared/_site_search.html.erb
+++ b/app/views/shared/_site_search.html.erb
@@ -1,11 +1,11 @@
 <%= form_tag main_app.search_catalog_path, method: :get, class: "search-form navbar-form" do %>
   <fieldset>
     <legend class="sr-only">Search <%= application_name %></legend>
-    <%= label_tag :catalog_search, t('curation_concerns.search.form.q.label'), class: "sr-only" %>
+    <%= label_tag :catalog_search, t('hyrax.search.form.q.label'), class: "sr-only" %>
     <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
     <div class="input-group">
       <%= text_field_tag(:q, params[:q], class: "q search-query form-control", id: "catalog_search",
-                         placeholder: t('curation_concerns.search.form.q.placeholder'), tabindex: "1", type: "search") %>
+                         placeholder: t('hyrax.search.form.q.placeholder'), tabindex: "1", type: "search") %>
 
       <div class="input-group-btn">
         <button type="submit" class="search-submit btn btn-primary" id="keyword-search-submit" tabindex="2">
