--- a/app/views/hyrax/file_sets/show.html.erb
+++ b/app/views/hyrax/file_sets/show.html.erb
@@ -4,6 +4,6 @@
 <% end %>
 <%= media_display @presenter %>
 <%= render "attributes", presenter: @presenter %>
-<%= render 'related_files', presenter: @presenter %>
+<%= render 'items', presenter: @presenter %>
 <%= render "show_actions", presenter: @presenter, parent: parent %>
 <%= render "single_use_links", presenter: @presenter if can? :edit, @presenter.id %>
