Fix display of encoder, tbc, ad

--- a/app/views/hyrax/works/_attribute_rows.html.erb
+++ b/app/views/hyrax/works/_attribute_rows.html.erb
@@ -17,12 +17,6 @@
   <%= presenter.attribute_to_html(:digitization_comments) %>
   <%= presenter.attribute_to_html(:system_create, label: 'Ingested date', catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:system_modified, label: 'Modified date', catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:encoder_manufacturer, catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:encoder_model, catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:encoder_serial_number, catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:ad_manufacturer, catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:ad_model, catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:ad_serial_number, catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:tbc_manufacturer, catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:tbc_model, catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:tbc_serial_number, catalog_search_link: true) %>
+  <%= presenter.attribute_to_html(:encoder, catalog_search_link: true) %>
+  <%= presenter.attribute_to_html(:ad, label: 'Analog/Digital Converter', catalog_search_link: true) %>
+  <%= presenter.attribute_to_html(:tbc, label: 'Time Base Corrector', catalog_search_link: true) %>
