Refactored encoder/tbc/ad as hardware, included player

--- a/app/views/hyrax/works/_attribute_rows.html.erb
+++ b/app/views/hyrax/works/_attribute_rows.html.erb
@@ -17,6 +17,4 @@
   <%= presenter.attribute_to_html(:digitization_comments) %>
   <%= presenter.attribute_to_html(:system_create, label: 'Ingested date', catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:system_modified, label: 'Modified date', catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:encoder, catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:ad, label: 'Analog/Digital Converter', catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:tbc, label: 'Time Base Corrector', catalog_search_link: true) %>
+  <%= presenter.attribute_to_html(:hardware) %>
