--- a/app/views/hyrax/file_sets/_actions.html.erb
+++ b/app/views/hyrax/file_sets/_actions.html.erb
@@ -1,26 +1,39 @@
-<%# FIXME: temp override %>
-<% if member.is_a? Hyrax::FilePresenter %>
-  <% if @presenter && can?(:read, @presenter.id) %>
-    <%= link_to 'Download', member.uri %>
-  <% else %>
-    You do not have download permissions
+<div class="btn-group">
+
+  <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" type="button" id="dropdownMenu_<%= file_set.id %>" aria-haspopup="true">
+    <span class="sr-only">Press to </span>
+    Select an action
+    <span class="caret" aria-hidden="true"></span>
+  </button>
+
+  <ul role="menu" class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu_<%= file_set.id %>">
+
+  <% if can?(:edit, file_set.id) %>
+    <li role="menuitem" tabindex="-1">
+      <%= link_to 'Edit', edit_polymorphic_path([main_app, file_set]),
+        { title: "Edit #{file_set}" } %>
+    </li>
+
+    <li role="menuitem" tabindex="-1">
+      <%= link_to 'Versions',  edit_polymorphic_path([main_app, file_set], anchor: 'versioning_display'),
+        { title: "Display previous versions" } %>
+    </li>
   <% end %>
-<% elsif file_set %>
-<% if can?(:edit, file_set.id) %>
-  <%= link_to( 'Edit', edit_polymorphic_path([main_app, file_set]),
-    { class: 'btn btn-default', title: "Edit #{file_set}" }) %>
-  <%= link_to( 'Rollback', main_app.versions_curation_concerns_file_set_path(file_set),
-    { class: 'btn btn-default', title: "Rollback to previous version" }) %>
-<% end %>
-<% if can?(:destroy, file_set.id) %>
-  <%= link_to( 'Delete', polymorphic_path([main_app, file_set]),
-    class: 'btn btn-default', method: :delete, title: "Delete #{file_set}",
-    data: {confirm: "Deleting #{file_set} from #{application_name} is permanent. Click OK to delete this from #{application_name}, or Cancel to cancel this operation"}
-  )%>
-<% end %>
-<% # TODO Implement large file interaction actions %>
-<% if false && can?(:read, file_set.id) %>
-  <%= link_to 'Download', main_app.download_path(file_set),
-    class: 'btn btn-default', title: "Download #{file_set.to_s.inspect}", target: "_blank" %>
-<% end %>
-<% end %>
+
+  <% if can?(:destroy, file_set.id) %>
+    <li role="menuitem" tabindex="-1">
+      <%= link_to 'Delete', polymorphic_path([main_app, file_set]),
+        method: :delete, title: "Delete #{file_set}",
+        data: {confirm: "Deleting #{file_set} from #{application_name} is permanent. Click OK to delete this from #{application_name}, or Cancel to cancel this operation"} %>
+    </li>
+  <% end %>
+
+  <% if can?(:read, file_set.id) %>
+    <li role="menuitem" tabindex="-1">
+      <%= link_to 'Download', hyrax.download_path(file_set),
+        title: "Download #{file_set.to_s.inspect}", target: "_blank" %>
+    </li>
+  <% end %>
+
+  </ul>
+</div>
