--- a/app/views/hyrax/works/_member.html.erb
+++ b/app/views/hyrax/works/_member.html.erb
@@ -2,8 +2,7 @@
   <td class="thumbnail">
     <%= render_thumbnail_tag member %>
   </td>
-  <td class="attribute filename"><%= link_to(member.link_name, main_app.curation_concerns_file_set_path(member)) %></td>
-  <td class="attribute quality_level"><%= member.quality_level.join(' ').titleize %></td>
+  <td class="attribute filename"><%= link_to(member.link_name, main_app.hyrax_file_set_path(member)) %></td>
   <td class="attribute permission"><%= member.permission_badge %></td>
   <td>
     <%= render 'hyrax/file_sets/actions', file_set: member %>
