Adds some basic styles for preservation events
* Also styles "Ingest Date/Time" on Catalog#index

--- a/app/assets/stylesheets/phydo.scss
+++ b/app/assets/stylesheets/phydo.scss
@@ -28,3 +28,10 @@ table.attributes {
     }
   }
 }
+
+/** Filter Search Ingest DateTime **/
+#ingest_date_time_filter {
+  input {
+    float: right;
+  }
+}
