--- a/app/views/hyrax/file_sets/_show_actions.html.erb
+++ b/app/views/hyrax/file_sets/_show_actions.html.erb
@@ -1,5 +1,5 @@
   <div class="form-actions">
-    <%= render partial: 'storage_proxy/actions', locals: { storage_proxy_presenter: @storage_proxy_presenter } %>
+    <%= render partial: 'async_controls/actions', locals: { async_controls_presenter: @async_controls_presenter } %>
 
     <% if can? :edit, presenter.id %>
       <%= link_to "Edit this File", edit_polymorphic_path([main_app, presenter]), class: 'btn btn-default'  %>
