Uprages Hyrax-ingest and Hyrax-preservation gems.
* Updates references to non-namespaced Preservation module by prefixing the
  'Hyrax' namespace.
* Removes overriding of FileSet Solr document's 'title' field with the FileSet's
  filename, instead reverting back to default Hyrax behavior.
* Comments out a frequently failing test for IU pre-ingest, which depends on
  fixture sthat seem to go stale too easily.

--- a/app/views/preservation/events/filter_search/_premis_event_type.html.erb
+++ b/app/views/preservation/events/filter_search/_premis_event_type.html.erb
@@ -7,7 +7,7 @@
   <div id="premis-event_sim" class="panel-collapse facet-content collapse in" aria-expanded="true" style>
     <div class="panel-body">
       <form id="premis_event_type_filter" action="<%= preservation.events_url %>">
-        <% Preservation::PremisEventType.all.each do |premis_event_type| %>
+        <% Hyrax::Preservation::PremisEventType.all.each do |premis_event_type| %>
           <div class="event-input">
             <input type="checkbox" id="premis_event_type_<%= premis_event_type.abbr %>" name="premis_event_type[]" value="<%= premis_event_type.abbr %>" <%= Array(request.params['premis_event_type']).include?(premis_event_type.abbr) ? 'checked="checked"' : '' %>/>
             <label for="premis_event_type_<%= premis_event_type.abbr %>"><%= premis_event_type.label.sub(/^PREMIS/ , '') %></label>
