--- a/app/views/hyrax/file_sets/show.html.erb
+++ b/app/views/hyrax/file_sets/show.html.erb
@@ -3,7 +3,8 @@
   <h1>File Details <small><%= @presenter %></small></h1>
 <% end %>
 <%= media_display @presenter %>
-<%= render "attributes", presenter: @presenter %>
+<%= render 'attributes', presenter: @presenter %>
+<%= render 'events', presenter: @presenter %>
 <%= render 'items', presenter: @presenter %>
-<%= render "show_actions", presenter: @presenter, parent: parent %>
-<%= render "single_use_links", presenter: @presenter if can? :edit, @presenter.id %>
+<%= render 'show_actions', presenter: @presenter, parent: parent %>
+<%= render 'single_use_links', presenter: @presenter if can? :edit, @presenter.id %>
