--- a/app/views/hyrax/file_sets/_attribute_rows.html.erb
+++ b/app/views/hyrax/file_sets/_attribute_rows.html.erb
@@ -16,4 +16,5 @@
   <%= presenter.attribute_to_html(:original_checksum, label: 'Checksum', catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:system_create, label: 'Ingested date', catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:system_modified, label: 'Modified date', catalog_search_link: true) %>
+  <%= presenter.attribute_to_html(:recent_preservation_events, label: 'Recent Preservation Events') %>
   <%= presenter.attribute_to_html(:preservation_events, label: 'Preservation Events') %>
