--- a/app/views/hyrax/file_sets/_member.html.erb
+++ b/app/views/hyrax/file_sets/_member.html.erb
@@ -5,7 +5,7 @@
   <td class="attribute date_uploaded"><%= member.try(:date_uploaded) || @presenter.try(:date_uploaded) %></td>
   <td class="attribute permission"><%= @presenter.permission_badge %></td>
   <td>
-    <%# FIXME = render 'actions', member: member %>
+    <%= render 'actions', member: member %>
   </td>
 </tr>
 
