--- a/app/views/hyrax/file_sets/_attribute_rows.html.erb
+++ b/app/views/hyrax/file_sets/_attribute_rows.html.erb
@@ -1,5 +1,6 @@
   <%= presenter.attribute_to_html(:title,catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:mdpi_barcode, catalog_search_link: true) %>
+  <%= presenter.attribute_to_html(:barcode, catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:filename, catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:date_generated, catalog_search_link: true) %>
   <%= presenter.attribute_to_html(:file_format, catalog_search_link: true) %>
