--- a/app/views/shared/_filter_search.html.erb
+++ b/app/views/shared/_filter_search.html.erb
@@ -3,3 +3,4 @@
 </div>
 <%= render 'filter_search/ingest_date_time' %>
 <%= render 'filter_search/last_fixity_date_time' %>
+<%= render 'filter_search/barcode' %>
