--- a/app/views/shared/_filter_search.html.erb
+++ b/app/views/shared/_filter_search.html.erb
@@ -4,3 +4,4 @@
 <%= render 'filter_search/ingest_date_time' %>
 <%= render 'filter_search/last_fixity_date_time' %>
 <%= render 'filter_search/barcode' %>
+<%= render 'filter_search/filename' %>
