[HDM-1168] Add search filter for file path, with partial matches

--- a/app/views/shared/_filter_search.html.erb
+++ b/app/views/shared/_filter_search.html.erb
@@ -2,3 +2,4 @@
   <%= link_to "Clear All Filters", "/catalog" %>
 </div>
 <%= render 'filter_search/ingest_date_time' %>
+<%= render 'filter_search/file_path_segment' %>
