Adds filter by file_format

--- a/app/views/shared/_filter_search.html.erb
+++ b/app/views/shared/_filter_search.html.erb
@@ -6,3 +6,4 @@
 <%= render 'filter_search/barcode' %>
 <%= render 'filter_search/filename' %>
 <%= render 'filter_search/file_path_segment' %>
+<%= render 'filter_search/file_format' %>
